--- a/translator.html
+++ b/translator.html
@@ -9,6 +9,10 @@
     </head>
     
 	<body class="translator">
+        <nav>
+            <a class="homelink" href="/">Chiffres</a>
+        </nav>
+
         <div class="block encrypt">
             <h2>Crypt</h2>
             <p>
